--- a/asset/style.css
+++ b/asset/style.css
@@ -1,5 +1,6 @@
 body {
-    background: url(jumbotronepics.jpg) no-repeat center center fixed;
+    background: url(jumbotronimg.jpg) no-repeat center center fixed;
+    background-size: cover;
     backdrop-filter: blur(10px);
 }
 
